--- a/index.html
+++ b/index.html
@@ -439,7 +439,8 @@ section.visible {
   <script>
   // Typing effect for roles
   const roles = [
-    "AI & Machine Learning Graduate 👨‍🎓",
+    "Computer Science and Engineering Graduate 👨‍🎓",
+    "Artifical Intelligence & Machine Learning",
     "Python Developer 🐍",
     "Deep Learning Explorer 🧠",
     "Full-Stack Web Enthusiast 🌐",
