--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@ section.visible {
     <h1>Hemanth Sai Anisetti</h1>
     <p><span id="typed-text"></span><span class="cursor">|</span></p>
     <div style="text-align:center; margin-top: 30px;">
-<a href="RESUME_NEW.pdf" download class="btn" id="resume-download">Download Resume</a>
+<a href="HEMANTH SAI ANISETTI.pdf" download class="btn" id="resume-download">Download Resume</a>
   </div>
 
   </header>
@@ -553,3 +553,4 @@ allSections.forEach(section => observer.observe(section));
 
 </body>
 </html>
+
