--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@ section.visible {
       activateLinkOnScroll(); // update nav active state
     });
 
-    activateLinkOnScroll(); // call once on load
+    activateLinkOnScroll(); 
   });
 
   document.addEventListener("DOMContentLoaded", () => {
@@ -553,4 +553,5 @@ allSections.forEach(section => observer.observe(section));
 
 </body>
 </html>
+
 
