--- a/index.html
+++ b/index.html
@@ -291,6 +291,7 @@ section.visible {
       <li><a href="#career"><i class="fas fa-bullseye"></i> Career Objective</a></li>
       <li><a href="#about"><i class="fas fa-user"></i> About</a></li>
       <li><a href="#education"><i class="fas fa-graduation-cap"></i> Education</a></li>
+      <li><a href="#work experience"><i class="fas fa-building"></i> Work Experience</a></li>
       <li><a href="#skills"><i class="fas fa-tools"></i> Skills</a></li>
       <li><a href="#projects"><i class="fas fa-code"></i> Projects</a></li>
       <li><a href="#certificates"><i class="fas fa-award"></i> Certificates</a></li>
@@ -553,5 +554,6 @@ allSections.forEach(section => observer.observe(section));
 
 </body>
 </html>
+
 
 
