Add work experience section and update styles
Added new sections for work experience and updated styles for buttons and sections.

--- a/index.html
+++ b/index.html
@@ -335,6 +335,13 @@ section.visible {
     </ul>
   </section>
 
+  <section id="work experience">
+    <h2>Work Experience</h2>
+    <ul>
+      <li><strong> Intern @ Technogen India pvt Ltd </strong></li>
+    </ul>
+  </section>
+ 
  <section id="skills">
   <h2>Technical Skills</h2>
   <div class="skill-tags">
@@ -410,7 +417,7 @@ section.visible {
   <div class="contact-details">
     <p><i class="fas fa-envelope"></i> <a href="mailto:hemanthsaianisetty5@gmail.com">hemanthsaianisetty5@gmail.com</a></p>
     <p><i class="fas fa-phone"></i> <a href="tel:+919440677639">+91 94406 77639</a></p>
-    <p><i class="fab fa-linkedin"></i> <a href="https://linkedin.com/in/hemanthsai-anisetti-930428220" target="_blank">linkedin.com/in/hemanthsai-anisetti-930428220</a></p>
+    <p><i class="fab fa-linkedin"></i> <a href="https://linkedin.com/in/hemanthsai-anisetti-930428220" target="_blank">hemanthsai-anisetti</a></p>
     <p><i class="fab fa-github"></i> <a href="https://github.com/Hemanth2468" target="_blank">github.com/Hemanth2468</a></p>
   </div>
 
@@ -554,6 +561,5 @@ allSections.forEach(section => observer.observe(section));
 
 </body>
 </html>
-
 
 
