--- a/index.html
+++ b/index.html
@@ -345,6 +345,7 @@ section.visible {
  <section id="skills">
   <h2>Technical Skills</h2>
   <div class="skill-tags">
+    <span>ServiceNow</span>
     <span>Python</span>
     <span>Java</span>
     <span>C</span>
@@ -561,5 +562,6 @@ allSections.forEach(section => observer.observe(section));
 
 </body>
 </html>
+
 
 
