--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@ section.visible {
   <section id="certificates">
   <h2>Certificates</h2>
   <ul>
-  
+    <li><strong>ServiceNow Certified System Administrator (CSA)</strong> – ServiceNow (2025)</li>
     <li>🐍 <strong>Lions Club:</strong> Python Certificate – 2023</li>
     <li>🎓 <strong>Infosys Springboard:</strong> Course Completion – 2023</li>
     <li>🤖 <strong>IBM:</strong> Artificial Intelligence Internship – 2024</li>
@@ -562,6 +562,7 @@ allSections.forEach(section => observer.observe(section));
 
 </body>
 </html>
+
 
 
 
